# Nubrix

./: .gitignore  Dockerfile.base  LICENSE  README.md  base_server.py  docker-compose.yml  main.py  pyproject.toml
ai/: README.md  index.html  main.py  pyproject.toml
app/: main.py
app/api/: monitoring.py
app/core/: config.py
app/services/: docker_service.py
orchestrator/: Dockerfile.orchestration  start.sh
orchestrator/app/api/: base.py  containers.py
orchestrator/app/models/: container.py
orchestrator/app/utils/: port_manager.py
web/: package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js
web/.next/: app-build-manifest.json  prerender-manifest.json  trace
web/.next/cache/: .rscinfo
web/.next/server/: server-reference-manifest.js  server-reference-manifest.json
web/.next/server/app/: page.js  page_client-reference-manifest.js
web/.next/server/chunks/: 4787e_next_7195d33f._.js.map  [root-of-the-server]__c478b14a._.js.map
web/.next/static/chunks/: 01841_@react-stately_datepicker_dist_5c0067de._.js  01841_@react-stately_datepicker_dist_5c0067de._.js.map  1acc3_@heroui_calendar_dist_5fc2fe5c._.js  1acc3_@heroui_calendar_dist_5fc2fe5c._.js.map  230bd_@radix-ui_react-select_dist_index_mjs_708158ea._.js  230bd_@radix-ui_react-select_dist_index_mjs_708158ea._.js.map  2b049_@heroui_theme_dist_0510a2eb._.js  2b049_@heroui_theme_dist_0510a2eb._.js.map  (+182 more)
web/app/: globals.css  layout.tsx  page.tsx
web/app/dashboard/: page.tsx
web/app/login/: page.tsx
web/components/: app-sidebar.tsx  nav-main.tsx  nav-user.tsx  site-header.tsx
(+223 files in other folders)
